# netbox-zabbix-sync

./: netbox_zabbix_mapper.py  netbox_zabbix_sync.py  pyproject.toml
modules/: device.py  hostgroups.py  interface.py  network_map.py  tags.py  tools.py  virtual_machine.py
tests/: test_configuration_parsing.py  test_hostgroups.py  test_interface.py  test_physical_device.py  test_usermacros.py
