[project]
name = "netbox-zabbix-sync"
version = "0.3.3"
description = "Python script to synchronize Netbox devices to Zabbix. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pynetbox==7.4.1", "zabbix-utils==2.0.3"]
authors = [{ name = "Twan Kamans", email = "twan@twan-it.nl" }]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/TheNetworkGuy/netbox-zabbix-sync/"
Repository = "https://github.com/TheNetworkGuy/netbox-zabbix-sync/"
Issues = "https://github.com/TheNetworkGuy/netbox-zabbix-sync/issues"

[tool.ruff.lint]
ignore = [
    # Ignore line-length
    "E501",
    # Too many statements
    "PLR0915",
    # Too many branches
    "PLR0912",
    # To many arguments
    "PLR0913",
]

select = [
    # commented-out-code
    "ERA001",
    # flake8-bandit
    "S",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # pep8-naming
    "N",
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-executable
    "EXE",
    # flake8-pie
    "PIE",
    # flake8-pyi
    "PYI",
    # flake8-simplify
    "SIM",
    # pylint
    "PL",
    # Ruff-specific rules
    "RUF",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow use of unittest assert methods
    "S101",
    # Allow many statements in test files
    "PLR0915",
]

# Ignore line-length
ignore = ["E501"]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.2", "types-requests>=2.32.4.20250913"]
